<resources>
    <string name="app_name">CyclingClub</string>
    <string name="project_app_name">GCC</string>
    <string name="log_in_text">Log In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="member_login">Member Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_final">Login</string>
    <string name="welcome_message">Welcome!</string>
    <string name="account_hint">(account type)</string>
    <string name="participant">Participant</string>
    <string name="cycling_club">Cycling Club</string>
    <string name="email_hint">Email</string>
    <string name="home_text">Home</string>
    <string name="profile_text">Profile</string>
    <string name="settings_text">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_type_management">EventTypeManagementActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="eventTypeDelete">Delete</string>
    <string name="eventTypeUpdate">Update</string>
    <string name="currentUserList">Current User List</string>
    <string name="userManagement">Users</string>
    <string name="eventType">Event Type</string>
    <string name="addNewEventType">New Event Type</string>
    <string name="userDetail">User Detail</string>
    <string name="btnBack">Back</string>
    <string name="btnDelete">Delete</string>
    <string name="btnAddEvent">Add New Event</string>
    <string name="btnEventManagement"> Event </string>
    <string name="eventName">Event Name</string>
    <string name="eventRegion">Event Region</string>
    <string name="eventTime">Event Date</string>
    <string name="eventDuration">Event Duration</string>
    <string name="currentEvent">Current Event</string>
    <string name="eventID">Event Name</string>
    <string name="eventTypeName">Event Type</string>
    <string name="eventDate">Event Date</string>
    <string name="eventRoute">Event Route</string>
    <string name="eventLevel">Difficulty Level</string>
    <string name="eventDistance">Route Distance</string>
    <string name="routeElevation">Route Elevation</string>
    <string name="eventFee">Registration Fee</string>
    <string name="eventLimit">Participant Limit</string>
    <string name="eventList">List of Events</string>
    <string name="cyclingClubProfile">Cycling Club Profile</string>
    <string name="clubName">Cycling Club Name</string>
    <string name="contactPerson">Main Contact</string>
    <string name="socialMediaLink">Social Media Link</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="region">Region</string>
    <string name="updateProfile">Update Profile</string>
    <string name="back">Back</string>
    <string name="Description">Description</string>
    <string name="btnEventType">Event Type</string>
    <string name="btnRegistration">Registration</string>
    <string name="searchBy">Search by</string>
    <string name="Search">Search Club</string>
    <string name="rateClub">Rate Club</string>
    <string name="rateCLub">Rate Club</string>
    <string name="discard">Discard</string>
    <string name="Rate">Rate</string>
    <string name="commen">Comment</string>
    <string name="Retister">Register</string>
    <string name="accepted">Accepted</string>
    <string name="giveAward">Award</string>
    <string name="registrationTitle">Registration management</string>
    <string name="searchEvent">Search Events</string>
    <string name="searchEventBy">Search Events By</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="rateaClub">Rate Club</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_user">Name</string>
    <string name="username_text">Username</string>
    <string name="email_text">Email</string>
    <string name="search_user">Search User</string>
    <string name="username">Username</string>
    <string name="users">Users</string>
    <string name="update_user_information">Update User Information</string>
    <string name="delete_account">Delete Account</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="password_text">Password</string>
    <string name="event_type_name">Event Type Name</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="list_of_users">List of Users</string>
</resources>