<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegistrationManagementActivity">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrationTitle"
        android:textSize="30dp" />

    <ListView
        android:id="@+id/listRegistration"
        android:layout_width="match_parent"
        android:layout_height="485dp" />

    <Button
        android:id="@+id/btnRegistrationUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventTypeUpdate" />

    <Button
        android:id="@+id/btnDeleteRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete" />
</LinearLayout>