<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="205dp"
            android:layout_height="50dp"
            android:text="@string/cyclingClubProfile" />

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_name"
            android:hint="@string/clubName"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="10dp"
                    android:id="@+id/editClubName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_contact"
                android:hint="@string/contactPerson"
                android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_contact_emergency_24"
                    android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_link"
                android:hint="@string/socialMediaLink"
                android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editMediaLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_insert_link_24"
                    android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_phone_number"
                android:hint="@string/phoneNumber"
                android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_region"
                android:hint="@string/region"
                android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_my_location_24"
                    android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btnProfileUpdate"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/updateProfile"
                android:layout_marginTop="25dp"/>

    </LinearLayout>

</LinearLayout>