<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ButtonLayout">
        <TextView
                android:id="@+id/textAppNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_app_name"
                android:gravity="center"
                android:layout_marginBottom="10dp" android:textStyle="bold" android:fontFamily="@font/atomic_age"
                android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ButtonLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:gravity="center|bottom"
            app:layout_constraintBottom_toBottomOf="parent">

        <Button
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in_text" android:onClick="onClickLogin"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>