<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="30dp">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_event_type_name"
                android:hint="@string/name"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTypeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_event_24"
                    android:drawablePadding="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_event_type_description"
                android:hint="@string/Description"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:gravity="start|top"
                    android:scrollbars="vertical"
                    android:drawableStart="@drawable/baseline_description_24"
                    android:drawablePadding="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
            <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/eventTypeDelete"
                    android:layout_marginHorizontal="25dp"/>
            <Button
                    android:id="@+id/buttonUpdate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/eventTypeUpdate"
                    android:layout_marginHorizontal="25dp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>